fixed icon alignment possible fix for icon being underlined

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,9 +28,7 @@ body {
 }
 
 .top-header .center .button i {
-    /*line-height: 50px;  */
-    display: flex;
-    align-items: center;
+    line-height: 50px;
     font-size: 20px;
 }
 
@@ -42,12 +40,13 @@ body {
 
 .top-header .center .button:hover {
     cursor: pointer;
-}
-
-.top-header .center .button p:hover {
     text-decoration: underline;
     text-shadow: 3px 3px 4px rgba(221, 221, 221, 0.5);
     transition: text-shadow 0.2s, text-decoration, 0.2s;
+}
+
+.top-header .center .button p:hover {
+    text-decoration: none;
 }
 
 .main-header {
